--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <!--[if IE]>
     <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
   <![endif]-->
-
   <h2>Eire Ford</h2>
-  <p><a href="resume.html">Resume</a><a href="resume.pdf"><sub> as pdf</sub></a></p>
-  <p><a href="github.com/eireford">Github/eireford</a></p>
-  <p><a href="github.com/eireford">Linkedin.com/in/eireford</a></p>
+  <p><a href="resume.html">Resume</a><a href="Eire_Ford_Resume.pdf"><sub> as pdf</sub></a></p>
+  <p><a href="https://github.com/eireford">Github/eireford</a></p>
+  <p><a href="https://linkedin.com/in/eireford">Linkedin.com/in/eireford</a></p>
+
   <script src="js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
